--- a/ta2men/assmap.css
+++ b/ta2men/assmap.css
@@ -197,22 +197,38 @@ body {
 
 /* Responsiveness */
 @media (max-width: 768px) {
-    .footer-container {
-     
-       
+    .city-btn {
+        width: 100%;
+        margin: 10px 0;
+        padding: 12px;
+        background-color: #007bff;
+        color: #ffffff;
+        border: none;
+        border-radius: 5px;
+        cursor: pointer;
+        font-size: 10px;
+        transition: background-color 0.3s, padding 0.6s;
     }
-
-    .footer-left, .footer-center, .footer-right {
-        margin: 1% 0;
-
+    .footer-left h3,
+.footer-right h3 {
+    font-size: 10px;
+    
+}
+    .footer-left p,
+    .footer-center p,
+    .footer-right p 
+    {
+       
+        font-size: 5px;
+        line-height: 1.6;
     }
 
     .container {
-        
+       
     }
 
     .map-container {
        
-        height: 200px; /* Adjust to make the image smaller on smaller screens */
+        height: 100%; /* Adjust to make the image smaller on smaller screens */
     }
 }
