--- a/ta2men/assmap.css
+++ b/ta2men/assmap.css
@@ -219,7 +219,7 @@ body {
     .footer-right p 
     {
        
-        font-size: 3px;
+        font-size: 3%;
         line-height: 1.6;
     }
 
