--- a/ta2men/assmap.css
+++ b/ta2men/assmap.css
@@ -197,17 +197,13 @@ body {
 
 /* Responsiveness */
 @media (min-width: 481px) and (max-width: 768px){
+    .right-bar h3 {
+        
+        font-size: 7px;
+    }
     .city-btn {
-        width: 100%;
-        margin: 10px 0;
-        padding: 12px;
-        background-color: #007bff;
-        color: #ffffff;
-        border: none;
-        border-radius: 5px;
-        cursor: pointer;
-        font-size: 10px;
-        transition: background-color 0.3s, padding 0.6s;
+        font-size: 5px;
+       
     }
     .footer-left h3,
 .footer-right h3 {
@@ -230,5 +226,13 @@ body {
     .map-container {
        
         height: 100%; /* Adjust to make the image smaller on smaller screens */
+    }
+    .map-container img {
+        max-width: 100%;
+        max-height: 100%;
+        width: auto;
+        height: auto;
+        border: 2px solid #00ff62;
+        border-radius: 10px;
     }
 }
