--- a/ta2men/assmap.css
+++ b/ta2men/assmap.css
@@ -212,6 +212,9 @@ body {
         margin: 1%;
        
     }
+    .footer{
+        height: 50%
+    }
     .footer-left h3,
 .footer-right h3 {
     font-size: 5px;
