--- a/ta2men/assmap.css
+++ b/ta2men/assmap.css
@@ -207,9 +207,9 @@ body {
         font-size: 7px;
     }
     .city-btn {
-        font-size: 5px;
-        padding: 0;
-        margin: 1%;
+        font-size: 3px;
+      margin: 0;
+      padding: 0;
        
     }
     .footer{
@@ -245,5 +245,16 @@ body {
         height: auto;
         border: 2px solid #00ff62;
         border-radius: 5px;
+    }
+    #city-details {
+        font-size: 7px;
+        
+       
+    }
+    
+    #city-details:hover {
+        
+        font-size: 7px;
+      
     }
 }
