--- a/ta2men/assmap.css
+++ b/ta2men/assmap.css
@@ -198,7 +198,7 @@ body {
 /* Responsiveness */
 @media (min-width: 481px) and (max-width: 768px){
     .left-bar, .right-bar {
-  
+        width: fit-content;
         padding: 2%;
        
     }
