--- a/ta2men/assmap.css
+++ b/ta2men/assmap.css
@@ -44,7 +44,7 @@ body {
     width: 100%;
     margin: 10px 0;
     padding: 12px;
-    background-color: #007bff;
+    background-color: #ffae00;
     color: #ffffff;
     border: none;
     border-radius: 5px;
