--- a/ta2men/assmap.css
+++ b/ta2men/assmap.css
@@ -5,7 +5,7 @@ body {
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background-color: #020202;
+    background-color: #ffffff;
     flex-direction: column;
 }
 
