--- a/Resala/Hamza.css
+++ b/Resala/Hamza.css
@@ -14,6 +14,8 @@
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    text-align: center;
+    justify-content: center;
 }
 img {
     max-width: 300px;
@@ -54,7 +56,7 @@ input[type=range] {
     width: 100%;
     background: #222;
     color: #fff;
-    padding: 15px 0;
+    padding: 5px 0;
     text-align: center;
 }
 
@@ -63,6 +65,7 @@ input[type=range] {
     width: 90%;
     margin: 0 auto;
     text-align: center;
+    justify-content: center;
 }
 
 
@@ -71,7 +74,7 @@ input[type=range] {
     flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
-    padding-bottom: 20px;
+    padding-bottom: 0px;
     border-bottom: 1px solid #444;
 }
 
